--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
+aiodns==3.2.0
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.4.0
+asyncio==3.4.3
+attrs==24.2.0
 azure-core==1.30.2
 azure-functions==1.20.0
+azure-functions-durable==1.2.9
 azure-identity==1.17.1
-anyio==4.4.0
 certifi==2024.7.4
+cffi==1.17.0
 charset-normalizer==3.3.2
+cryptography==43.0.0
 distro==1.9.0
 et-xmlfile==1.1.0
+frozenlist==1.4.1
+furl==2.1.3
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 lxml==5.2.2
+msal==1.30.0
+msal-extensions==1.2.0
+multidict==6.0.5
 numpy==2.0.1
 openai==1.37.0
 openpyxl==3.1.5
+orderedmultidict==1.0.1
 pandas==2.2.2
 pillow==10.4.0
+portalocker==2.10.1
+pycares==4.4.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+PyJWT==2.9.0
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
@@ -34,5 +53,4 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 XlsxWriter==3.2.0
-azure-functions
-azure-functions-durable
+yarl==1.9.4
